development/forgejo/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: forgejo-body-limit
  namespace: development
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: forgejo-main
  requestBuffer:
    limit: 1024Mi
  timeout:
    request: "30s"
